--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rfc3986==1.5.0
-scikit-learn==1.1.3.post1
+scikit-learn==1.1.3
 scipy==1.12.0
 setuptools==69.1.0
 six==1.16.0
