--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ pypiwin32==223
 python-dateutil==2.8.2
 pyttsx3==2.98
 pytz==2024.1
-
+pywin32==223
 PyYAML==6.0.1
 requests==2.31.0
 rfc3986==1.5.0
