--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ psycopg2-binary==2.9.10
 py==1.11.0
 PyMySQL==1.1.1
 pyparsing==3.1.1
-
+pywin32==223
 python-dateutil==2.8.2
 pyttsx3==2.98
 pytz==2024.1
